--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>RENDU EXAMEN</h1>
-<router-outlet></router-outlet>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" routerLink="/region">LISTE DES REGIONS</a>
+    <a class="navbar-brand" routerLink="/departement">LISTE DES DEPARTEMENTS</a>
+</nav>
+
+<router-outlet></router-outlet>
